<resources>
    <string name="app_name">PUNKTY MEDYCZNE</string>
    <string name="apteka">APTEKA</string>
    <string name="szpital">SZPITAL</string>
    <string name="przychodnia">PRZYCHODNIA</string>
    <string name="nisoz">NiSOZ</string>
    <string name="maksymalna_odl">MAKSYMALNA ODLEGŁOŚĆ</string>
    <string name="godziny_otwarcia">GODZINY OTWARCIA</string>
    <string name="otw_teraz">OTWARTE TERAZ</string>
    <string name="godz_otw">CZYNNE OD GODZINY</string>
    <string name="godz_zam">CZYNNE DO GODZINY</string>
    <string name="ocena">OCENA UŻYTKOWNIKÓW</string>
    <string name="specjalista">SPECJALISTA</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_maps3">Map</string>
</resources>
