<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.wojciech.chorzydoktorzy.Main2Activity">

    <TextView
        android:id="@+id/textView"
        android:text="@string/maksymalna_odl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="360dp"
        android:layout_marginHorizontal="30dp"
        android:textSize="20dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
         />

    <com.xw.repo.BubbleSeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:bsb_bubble_color="@color/colorPrimary"
        app:bsb_track_color="@color/colorPrimary"
        app:bsb_bubble_text_color="@color/tlo"
        app:bsb_second_track_color="@color/colorPrimary"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="360dp"
        android:layout_marginHorizontal="30dp"
        app:bsb_min="0"
        app:bsb_max="1000"
        app:bsb_progress="0"
        app:bsb_section_count="5"
        app:bsb_section_text_position="bottom_sides"
        app:bsb_show_progress_in_float="false"
        app:bsb_show_section_text="true"
        app:bsb_show_section_mark="true"
        app:bsb_show_thumb_text="true"

        />

    <TextView
        android:id="@+id/textView2"
        android:text="@string/godziny_otwarcia"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:layout_marginTop="180dp"
        android:layout_marginBottom="130dp"
        android:layout_marginHorizontal="30dp"
        android:textSize="20dp"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimary"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/otw_teraz"
        android:layout_marginTop="220dp"
        android:layout_marginBottom="250dp"
        android:layout_marginHorizontal="30dp"/>

    <com.crystal.crystalrangeseekbar.widgets.BubbleThumbSeekbar
        android:id="@+id/rangeSeekbar3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="260dp"
        android:layout_marginBottom="200dp"
        android:layout_marginHorizontal="30dp"
        app:bar_color="#F7BB88"
        app:bar_highlight_color="#E07416"
        app:corner_radius="10"
        app:data_type="_integer"
        app:max_value="100"
        app:min_value="0"
        app:steps="5" />


</android.support.constraint.ConstraintLayout>
